--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ header{
    color: var(--clr-white);
    text-transform: uppercase;
    letter-spacing: .5rem;
-   margin-top: 3rem;
+   margin-top: 3.5rem;
    font-family: var(--ff-fraunces);
    font-size: 3.5rem;
    padding-inline: 1rem;
@@ -317,7 +317,7 @@ header{
    background-size: cover;
    text-align: center;
    padding-bottom: 2rem;
-   padding-top: 22rem;
+   padding-top: 25rem;
    padding-inline: 1rem;
  }
 
@@ -345,7 +345,8 @@ header{
    background-size: cover;
    text-align: center;
    padding-bottom: 2rem;
-   padding-top: 22rem;
+   padding-top: 25rem;
+   padding-inline: 1rem;
 }
 
 
